--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 
-  <h1>Version 4</h1>
-  <h1>Version 4</h1>
-  <h1>Version 4</h1>
-  <h1>Version 4</h1>
+  <h1>Version 3 was restored</h1>
+  <h1>Version 3 was restored</h1>
+  <h1>Version 3 was restored</h1>
+  <h1>Version 3 was restored</h1>
+
   
 </body>
 </html>
